:lipstick: Updating the UI and style files.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,7 +12,7 @@
   
   <servlet>
   	<servlet-name>AccountManage</servlet-name>
-  	<servlet-class>ddvudo.servlet.AccountManage</servlet-class>
+  	<servlet-class>servlet.AccountManage</servlet-class>
   </servlet>
   <servlet-mapping>
         <servlet-name>AccountManage</servlet-name>
