--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,10 +9,19 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  
-  <servlet>
+
+    <filter>
+        <filter-name>encodeFilter</filter-name>
+        <filter-class>WebComponent.Filters.EncodeFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>encodeFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <servlet>
   	<servlet-name>AccountManage</servlet-name>
-  	<servlet-class>servlet.AccountManage</servlet-class>
+        <servlet-class>WebComponent.servlet.AccountManage</servlet-class>
   </servlet>
   <servlet-mapping>
         <servlet-name>AccountManage</servlet-name>
