:ok_hand: Updating code due to code review changes.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_4_0.xsd"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          id="WebApp_ID" version="3.0">
     <display-name>TestWeb</display-name>
     <welcome-file-list>
@@ -22,11 +22,11 @@
     </filter-mapping>
 
     <servlet>
-        <servlet-name>BaseServlet</servlet-name>
-        <servlet-class>WebComponent.servlet.BaseServlet</servlet-class>
+        <servlet-name>AccountManage</servlet-name>
+        <servlet-class>WebComponent.servlet.AccountManage</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>BaseServlet</servlet-name>
-        <url-pattern>/RPC.DO</url-pattern>
+        <servlet-name>AccountManage</servlet-name>
+        <url-pattern>/AccountManage</url-pattern>
     </servlet-mapping>
 </web-app>
