--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false
+jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb2?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false
 driverClass=com.mysql.cj.jdbc.Driver
 user=how2j
 password=liukang
