--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,20 @@
 		<commons-fileupload.version>1.3.3</commons-fileupload.version>
 		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
 		<maven-compiler-plugin.CompileLevel>1.8</maven-compiler-plugin.CompileLevel>
+		<shiro.version>1.4.1</shiro.version>
 		<SSRServerDetection.version>0.0.1-SNAPSHOT</SSRServerDetection.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-core</artifactId>
+			<version>${shiro.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-web</artifactId>
+			<version>${shiro.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
