:bento: Adding or updating assets.

--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,10 @@
                     <target>${maven-compiler-plugin.CompileLevel}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.3</version>
+            </plugin>
         </plugins>
     </build>
 </project>
