--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
-jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false
-driverClass=com.mysql.cj.jdbc.Driver
-user=how2j
-password=liukang
+db.jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false
+db.driverClass=com.mysql.cj.jdbc.Driver
+db.user=how2j
+db.password=liukang
 poolPingEnabled=true
 poolPingQuery=select 1
 poolPingConnectionsNotUsedFor=36
