--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,8 @@
-log4j.rootLogger=debug,stdout
+log4j.rootLogger=trace,stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=%highlight{%5p [%t] (%C:%L) - %m%n}
+log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%C:%L) - %m%n
 #log4j.appender.R=org.apache.log4j.RollingFileAppender
 #log4j.appender.R.File=example.log
 #log4j.appender.R.MaxFileSize=100KB
