--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
 log4j.rootLogger=debugger,stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Encoding=UTF-8
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] [%C:%L] - %m%n
