--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <lucene-analyzers.version>3.6.2</lucene-analyzers.version>
         <mysql-connector-java.version>8.0.11</mysql-connector-java.version>
         <servletapi.version>2.4</servletapi.version>
-        <log4j.version>1.2.17</log4j.version>
+        <log4j.version>1.7.25</log4j.version>
         <mabatis.version>3.5.1</mabatis.version>
         <junit.version>4.12</junit.version>
         <fastjson.version>1.2.56</fastjson.version>
@@ -65,6 +65,12 @@
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-core</artifactId>
             <version>${shiro.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
@@ -82,9 +88,15 @@
             <version>${servletapi.version}</version>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
             <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${log4j.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
