--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <lucene.version>8.1.0</lucene.version>
         <lucene-analyzers.version>3.6.2</lucene-analyzers.version>
         <mysql-connector-java.version>8.0.11</mysql-connector-java.version>
-        <servletapi.version>2.4</servletapi.version>
+        <servletapi.version>3.1.0</servletapi.version>
         <log4j.version>1.7.25</log4j.version>
         <mabatis.version>3.5.1</mabatis.version>
         <junit.version>4.12</junit.version>
@@ -83,9 +83,10 @@
             <version>${mysql-connector-java.version}</version>
         </dependency>
         <dependency>
-            <groupId>servletapi</groupId>
-            <artifactId>servletapi</artifactId>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
             <version>${servletapi.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
