彩色日志，依赖关系，mysql时间字段处理

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-db.jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false
+db.jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
 db.driverClass=com.mysql.cj.jdbc.Driver
 db.user=how2j
 db.password=liukang
