--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <lucene-analyzers.version>3.6.2</lucene-analyzers.version>
         <mysql-connector-java.version>8.0.11</mysql-connector-java.version>
         <servletapi.version>3.1.0</servletapi.version>
-        <log4j.version>1.7.25</log4j.version>
+        <log4j.version>2.12.1</log4j.version>
         <mabatis.version>3.5.1</mabatis.version>
         <junit.version>4.12</junit.version>
         <fastjson.version>1.2.56</fastjson.version>
@@ -28,6 +28,11 @@
         <validation-api.version>2.0.1.Final</validation-api.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-1.2-api</artifactId>
+            <version>2.0-rc1</version>
+        </dependency>
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
@@ -81,12 +86,6 @@
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-core</artifactId>
             <version>${shiro.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>slf4j-api</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
@@ -103,17 +102,6 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>${servletapi.version}</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${log4j.version}</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
