--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
-db.driverClass=com.mysql.cj.jdbc.Driver
+db.driverclass=com.mysql.cj.jdbc.Driver
 db.user=how2j
 db.password=liukang
 spring.datasource.druid.filter.slf4j.enabled=true
