重写老的页面

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ db.jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoR
 db.driverclass=com.mysql.cj.jdbc.Driver
 db.user=how2j
 db.password=liukang
+# 定位页面的目录到static/下
+#spring.mvc.view.prefix=/
+#spring.mvc.view.suffix=.html
 spring.datasource.druid.filter.slf4j.enabled=true
 spring.datasource.druid.filter.slf4j.statement-create-after-log-enabled=false
 spring.datasource.druid.filter.slf4j.statement-close-after-log-enabled=false
