--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ db.jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoR
 db.driverclass=com.mysql.cj.jdbc.Driver
 db.user=how2j
 db.password=liukang
+# 设置端口号
+server.port=80
 # 定位页面的目录到static/下
 #spring.mvc.view.prefix=/
 #spring.mvc.view.suffix=.html
