切换数据库到postgresql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-db.jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
-db.driverclass=com.mysql.cj.jdbc.Driver
-db.user=how2j
-db.password=liukang
+# db.jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
+# db.driverclass=com.mysql.cj.jdbc.Driver
+db.jdbcUrl=jdbc:postgresql://188.131.157.4:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
+db.driverclass=org.postgresql.Driver
+db.user=postgres
+db.password=liukang951006
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
 # 暴露所有actuator端点
