切换数据库到postgresql

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
             <artifactId>jedis</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
