初步成个形，登录还有疑问

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,10 @@ db.jdbcUrl=jdbc:postgresql://188.131.157.4:5432/how2jdb?characterEncoding=UTF-8&
 db.driverclass=org.postgresql.Driver
 db.user=postgres
 db.password=liukang951006
+# 错误页面
+server.error.path=/sa-html/cfg/500.html
 # 日志级别
-logging.level.root=debug
+logging.level.root=info
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
 # 暴露所有actuator端点
