--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>ddvudo</groupId>
     <artifactId>TestWeb</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
