redis存储session，使用pagehelper分页,更换前端资源的cdn

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,11 @@ server.port=80
 # 定位页面的目录到static/下
 #spring.mvc.view.prefix=/
 #spring.mvc.view.suffix=.html
+# 分页配置
+pagehelper.reasonable=true
+#---------------
+spring.session.timeout=3600000
+spring.session.store-type=redis
 spring.datasource.druid.filter.slf4j.enabled=false
 spring.datasource.druid.filter.slf4j.statement-create-after-log-enabled=false
 spring.datasource.druid.filter.slf4j.statement-close-after-log-enabled=false
