菜单可以选择自定义图标，图标来自element-ui,更换比较慢的cdn，修复其他发现的问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ db.password=liukang951006
 # 错误页面
 server.error.path=/sa-html/cfg/500.html
 # 日志级别
-logging.level.root=info
+logging.level.root=INFO
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
 # 暴露所有actuator端点
