session存到redis,项目重启不掉线，文件上传配置遵循约定大于配置原则

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,10 @@ server.port=80
 #spring.mvc.view.suffix=.html
 # 分页配置
 pagehelper.reasonable=true
+# 文件傻上传配置
+spring.servlet.multipart.location=classpath:/file-uplaod/
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=50MB
 #---------------
 spring.session.timeout=3600000
 spring.session.store-type=redis
