--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 # db.jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
 # db.driverclass=com.mysql.cj.jdbc.Driver
-db.jdbcUrl=jdbc:postgresql://188.131.157.4:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
-db.driverclass=org.postgresql.Driver
-db.user=postgres
-db.password=liukang951006
+ddvudo.datasource.jdbcUrl=jdbc:postgresql://188.131.157.4:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
+ddvudo.datasource.driverclass=org.postgresql.Driver
+ddvudo.datasource.user=postgres
+ddvudo.datasource.password=liukang951006
+# 文件存储配置
+ddvudo.MinIO.endpoint=http://188.131.157.4:9000/
+ddvudo.MinIO.accessKey=admin
+ddvudo.MinIO.secretKey=liukang951006
 # 错误页面
 server.error.path=/sa-html/cfg/500.html
 # 日志级别
 logging.level.root=INFO
+logging.level.ORM.Mapper=DEBUG
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
 # 暴露所有actuator端点
@@ -22,9 +27,9 @@ server.port=80
 # 分页配置
 pagehelper.reasonable=true
 # 文件傻上传配置
-spring.servlet.multipart.location=classpath:/file-uplaod/
-spring.servlet.multipart.max-file-size=1MB
-spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=500MB
 #---------------
 spring.session.timeout=3600000
 spring.session.store-type=redis
