基础配置有问题，https://docs.spring.io/spring-boot/docs/2.2.2.RELEASE/reference/html/spring-boot-features.html#boot-features-developing-web-applications

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ ddvudo.MinIO.secretKey=liukang951006
 server.error.path=/sa-html/cfg/500.html
 # 日志级别
 logging.level.root=INFO
+logging.level.io.lettuce=OFF
 logging.level.ORM.Mapper=DEBUG
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
@@ -37,4 +38,3 @@ spring.redis.password=liukang951006
 #####################
 spring.session.timeout=3600
 spring.session.store-type=redis
-spring.session.redis.cleanup-cron=0 * 1 * * *
