spring-boot2不再适用spring in action书中提到的配置方法，而是通过别的办法，如果按照以前自己进行继承之后override方法进行配置，会导致spring-boot2自带的自动配置类失效，而自己的配置类未override所有方法，就会导致不可知的问题，参照官方文档，比如自定义消息转换器不需要编写继承特定类的配置类，地址在https://docs.spring.io/spring-boot/docs/2.2.2.RELEASE/reference/html/spring-boot-features.html#boot-features-spring-mvc-message-converters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ server.error.path=/sa-html/cfg/500.html
 # 日志级别
 logging.level.root=INFO
 logging.level.io.lettuce=OFF
+logging.level.org.springframework.context.support=OFF
 logging.level.ORM.Mapper=DEBUG
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
