spring-boot2自带的WebMvcAutoConfigurationAdapter和自己写的实现WebMvcConfigurer的配置类WebConfig的加载顺序仍不清楚

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,7 @@ management.endpoint.health.show-details=always
 # 定位页面的目录到static/下
 #spring.mvc.view.prefix=/
 #spring.mvc.view.suffix=.html
+server.compression.enabled=true
 ####################
 # 分页配置
 pagehelper.reasonable=true
