地图可视化

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ server.error.whitelabel.enabled=true
 # 日志级别
 logging.level.root=INFO
 logging.level.io.lettuce=OFF
-logging.level.ORM.Mapper=DEBUG
+logging.level.ORM.Mapper=INFO
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
 # 暴露所有actuator端点
