--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 设置端口号
 server.port=80
 # 数据库配置
-ddvudo.datasource.jdbcUrl=jdbc:postgresql://188.131.157.4:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
+ddvudo.datasource.jdbcUrl=jdbc:postgresql://ddvudo.top:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
 ddvudo.datasource.driverClass=org.postgresql.Driver
 ddvudo.datasource.user=postgres
 ddvudo.datasource.password=liukang951006
@@ -37,7 +37,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=500MB
 #####################
-spring.redis.host=188.131.157.4
+spring.redis.host=ddvudo.top
 spring.redis.password=liukang951006
 #####################
 spring.session.timeout=3600
