去掉不必要配置类，遵循约定大于配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 设置端口号
 server.port=80
 # 数据库配置
-spring.datasource.druid.url=jdbc:postgresql://ddvudo.top:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.druid.url=jdbc:postgresql://104.18.62.60:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.druid.driver-class-name=org.postgresql.Driver
 spring.datasource.druid.username=postgres
 spring.datasource.druid.password=liukang951006
@@ -40,7 +40,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=500MB
 #####################
-spring.redis.host=ddvudo.top
+spring.redis.host=104.18.62.60
 spring.redis.password=liukang951006
 #####################
 spring.session.timeout=3600
