疫情数据处理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 设置端口号
 server.port=80
 # 数据库配置
-spring.datasource.druid.url=jdbc:postgresql://149.129.74.179:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.druid.url=jdbc:postgresql://db.ddvudo.top:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.druid.driver-class-name=org.postgresql.Driver
 spring.datasource.druid.username=postgres
 spring.datasource.druid.password=liukang951006
@@ -22,8 +22,7 @@ server.error.include-stacktrace=always
 server.error.whitelabel.enabled=true
 # 日志级别
 logging.level.root=INFO
-logging.level.io.lettuce=OFF
-logging.level.ORM.Mapper=INFO
+logging.level.ORM.Mapper=DEBUG
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
 # 暴露所有actuator端点
@@ -40,7 +39,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=500MB
 #####################
-spring.redis.host=149.129.74.179
+spring.redis.host=db.ddvudo.top
 spring.redis.password=liukang951006
 #####################
 spring.session.timeout=3600
