--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # 设置端口号
-server.port=80
+server.port=443
+server.port.http=80
 # 数据库配置
 spring.datasource.druid.url=jdbc:postgresql://db.ddvudo.top:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.druid.driver-class-name=org.postgresql.Driver
