--- a/src/main/resources/application-server.properties
+++ b/src/main/resources/application-server.properties
@@ -1,5 +1,5 @@
-server.port=443
-server.port.http=80
+#server.port=443
+#server.port.http=80
 file.tmp.location=/var/lib/website
 #server.ssl.enabled=true
 #server.ssl.key-store=classpath:ddvudo.top.keystore
