疫情数据处理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,8 +39,10 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=500MB
 #####################
-spring.redis.host=149.129.74.179
+spring.redis.host=db.ddvudo.top
+spring.redis.port=6379
 spring.redis.password=liukang951006
+spring.redis.timeout=5000
 #####################
 spring.session.timeout=3600
 spring.session.store-type=redis
