疫情数据处理，配置修改

--- a/src/main/resources/application-server.properties
+++ b/src/main/resources/application-server.properties
@@ -1,6 +1,7 @@
 #server.port=443
 #server.port.http=80
 file.tmp.location=/var/lib/website
+spring.redis.host=127.0.0.1
 #server.ssl.enabled=true
 #server.ssl.key-store=classpath:ddvudo.top.keystore
 #server.ssl.key-store-password=123456
