--- a/src/main/resources/application-server.properties
+++ b/src/main/resources/application-server.properties
@@ -1,7 +1,8 @@
 #server.port=443
 #server.port.http=80
+spring.redis.host=localhost
+logging.level.root=INFO
 file.tmp.location=/var/lib/website
-spring.redis.host=127.0.0.1
 #server.ssl.enabled=true
 #server.ssl.key-store=classpath:ddvudo.top.keystore
 #server.ssl.key-store-password=123456
