--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 设置端口号
 server.port=8080
 # 数据库配置
-spring.datasource.druid.url=jdbc:postgresql://188.131.157.4:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.druid.url=jdbc:postgresql://ddvudo.top:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.druid.driver-class-name=org.postgresql.Driver
 spring.datasource.druid.username=postgres
 spring.datasource.druid.password=liukang951006
@@ -20,9 +20,6 @@ server.error.include-exception=true
 server.error.path=/sa-html/cfg/500.html
 server.error.include-stacktrace=always
 server.error.whitelabel.enabled=true
-# 日志级别
-logging.level.root=DEBUG
-#logging.level.ORM.Mapper=DEBUG
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
 # 暴露所有actuator端点
@@ -39,7 +36,6 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=500MB
 #####################
-spring.redis.host=188.131.157.4
 spring.redis.port=6379
 spring.redis.password=liukang951006
 spring.redis.timeout=5000
