--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ ddvudo.MinIO.secretKey=liukang951006
 #server.error.include-exception=true
 #server.error.path=/sa-html/cfg/500.html
 #server.error.include-stacktrace=always
-#server.error.whitelabel.enabled=false
+#server.error.whitelabel.enabled=true
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
 # 暴露所有actuator端点
@@ -45,4 +45,4 @@ spring.session.store-type=redis
 file.tmp.location=D://ncovData
 # 日志级别
 logging.level.root=INFO
-#logging.level.org.springframework=DEBUG
+#logging.level.ORM.Mapper=DEBUG
