做前后端分离

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,10 @@ ddvudo.MinIO.endpoint=http://188.131.157.4:9000/
 ddvudo.MinIO.accessKey=admin
 ddvudo.MinIO.secretKey=liukang951006
 # 错误页面
-server.error.include-exception=true
-server.error.path=/sa-html/cfg/500.html
-server.error.include-stacktrace=always
-server.error.whitelabel.enabled=true
+#server.error.include-exception=true
+#server.error.path=/sa-html/cfg/500.html
+#server.error.include-stacktrace=always
+#server.error.whitelabel.enabled=true
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
 # 暴露所有actuator端点
@@ -45,4 +45,4 @@ spring.session.store-type=redis
 file.tmp.location=D://ncovData
 # 日志级别
 logging.level.root=INFO
-#logging.level.ORM.Mapper=DEBUG
+logging.level.org.springframework.security=DEBUG
