--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,4 +45,4 @@ spring.session.store-type=redis
 file.tmp.location=D://ncovData
 # 日志级别
 logging.level.root=INFO
-#logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=DEBUG
