修好了依赖的问题

--- a/WebSite-config-server/src/main/resources/bootstrap.yml
+++ b/WebSite-config-server/src/main/resources/bootstrap.yml
@@ -1,12 +1,11 @@
 server:
   port: 8001
 spring:
-  profiles:
-    active: native,default
   cloud:
     config:
       server:
-        native:
-          search-locations: file:///D:/idea-workspace/SpringCloudConfigrepository/website
+        git:
+          uri: https://github.com/ddv12138/SpringCloudConfigrepository
+  #          search-paths: /website
   application:
     name: WebSite-root
