配置中心弄好了

--- a/WebSite-config-server/src/main/resources/bootstrap.yml
+++ b/WebSite-config-server/src/main/resources/bootstrap.yml
@@ -6,6 +6,8 @@ spring:
       server:
         git:
           uri: https://github.com/ddv12138/SpringCloudConfigrepository
-  #          search-paths: /website
+          search-paths: /website
+          default-label: master
+          skip-ssl-validation: true
   application:
-    name: WebSite-root
+    name: WebSite-config
