注册中心弄好了，完成服务的注册和发现

--- a/WebSite-config-server/src/main/resources/bootstrap.yml
+++ b/WebSite-config-server/src/main/resources/bootstrap.yml
@@ -11,3 +11,11 @@ spring:
           skip-ssl-validation: true
   application:
     name: WebSite-config
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    serviceUrl:
+      defaultZone: http://localhost:8002/eureka/
