--- a/WebSite-Root/pom.xml
+++ b/WebSite-Root/pom.xml
@@ -2,7 +2,6 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>ddvudo</groupId>
     <artifactId>WebSite-root</artifactId>
     <version>2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -41,6 +40,14 @@
                 <version>Hoxton.SR4</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-eureka</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-eureka-server</artifactId>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
