--- a/WebSite-config-server/pom.xml
+++ b/WebSite-config-server/pom.xml
@@ -27,5 +27,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
