--- a/WebSite-lianjia/pom.xml
+++ b/WebSite-lianjia/pom.xml
@@ -2,8 +2,6 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <artifactId>WebSite-eureka</artifactId>
-    <version>2.0-SNAPSHOT</version>
     <parent>
         <artifactId>WebSite</artifactId>
         <groupId>ddvudo</groupId>
@@ -11,10 +9,20 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <artifactId>WebSite-lianjia</artifactId>
     <dependencies>
         <dependency>
+            <groupId>ddvudo</groupId>
+            <artifactId>WebSite-root</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka-server</artifactId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
             <version>1.4.7.RELEASE</version>
         </dependency>
     </dependencies>
