--- a/WebSite-eureka/src/main/resources/bootstrap.yml
+++ b/WebSite-eureka/src/main/resources/bootstrap.yml
@@ -4,5 +4,7 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8002/eureka/
   server:
     wait-time-in-ms-when-sync-empty: 5
