--- a/WebSite-lianjia/pom.xml
+++ b/WebSite-lianjia/pom.xml
@@ -14,8 +14,6 @@
         <dependency>
             <groupId>ddvudo</groupId>
             <artifactId>WebSite-root</artifactId>
-            <version>2.0-SNAPSHOT</version>
-            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -24,13 +22,26 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
-            <version>1.4.7.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>ddvudo</groupId>
-            <artifactId>WebSite-root</artifactId>
-            <version>2.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
         </dependency>
     </dependencies>
 
