--- a/WebSite-root/pom.xml
+++ b/WebSite-root/pom.xml
@@ -4,6 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>WebSite-root</artifactId>
     <version>2.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <parent>
         <artifactId>WebSite</artifactId>
         <groupId>ddvudo</groupId>
@@ -17,13 +18,21 @@
         <java.version>1.8</java.version>
         <springboot.version>2.2.1.RELEASE</springboot.version>
     </properties>
-    <repositories>
-        <repository>
-            <id>nexus-aliyun</id>
-            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
-        </repository>
-    </repositories>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>lettuce-core</artifactId>
+                    <groupId>io.lettuce</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-client</artifactId>
@@ -31,15 +40,6 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
-            <version>1.4.7.RELEASE</version>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 </project>
