分离单个服务，重构共有类，服务之间调用调不通

--- a/WebSite-config/src/main/resources/bootstrap.yml
+++ b/WebSite-config/src/main/resources/bootstrap.yml
@@ -12,7 +12,7 @@ spring:
     name: WebSite-config
 eureka:
   instance:
-    prefer-ip-address: true
+    preferIpAddress: true
   client:
     register-with-eureka: true
     fetch-registry: true
