--- a/WebSite-eureka/src/main/resources/bootstrap.yml
+++ b/WebSite-eureka/src/main/resources/bootstrap.yml
@@ -1,6 +1,8 @@
 server:
   port: 8002
 eureka:
+  instance:
+    preferIpAddress: true
   client:
     register-with-eureka: false
     fetch-registry: false
