--- a/WebSite-web/src/main/resources/bootstrap.yml
+++ b/WebSite-web/src/main/resources/bootstrap.yml
@@ -7,6 +7,8 @@ spring:
         enabled: true
         service-id: website-config
 eureka:
+  instance:
+    preferIpAddress: true
   client:
     service-url:
       defaultZone: http://localhost:8002/eureka/
