修复，重构,config和eureka服务放一起

--- a/WebSite-lianjia/src/main/resources/bootstrap.yml
+++ b/WebSite-lianjia/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
     config:
       discovery:
         enabled: true
-        serviceId: website-config
+        serviceId: website-eureka-config
 eureka:
   instance:
     prefer-ip-address: true
