--- a/WebSite-eureka-config/pom.xml
+++ b/WebSite-eureka-config/pom.xml
@@ -2,21 +2,20 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <artifactId>WebSite-config</artifactId>
-    <version>2.0-SNAPSHOT</version>
     <parent>
-        <groupId>ddvudo</groupId>
         <artifactId>WebSite</artifactId>
+        <groupId>ddvudo</groupId>
         <version>2.0-SNAPSHOT</version>
     </parent>
+    <artifactId>WebSite-eureka-config</artifactId>
+    <version>2.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-    </properties>
-
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka-server</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
@@ -26,4 +25,5 @@
             <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
     </dependencies>
+
 </project>
