--- a/WebSite-lianjia/pom.xml
+++ b/WebSite-lianjia/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>WebSite-lianjia</artifactId>
+    <version>2.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>ddvudo</groupId>
