--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>WebSite-Root</module>
-        <module>Website-config</module>
         <module>WebSite-web</module>
-        <module>WebSite-eureka</module>
+        <module>WebSite-eureka-config</module>
         <module>WebSite-lianjia</module>
     </modules>
     <parent>
