--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /target/
+*/target/
 /.metadata/
 /.settings
 /RemoteSystemsTempFiles
@@ -8,6 +9,8 @@
 .factorypath
 .classpath
 .project
-/.idea/
+*/.idea/
 /ncovData/
 .idea/*
+*/*.iml
+*.iml
