--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,4 +46,4 @@ server.servlet.session.timeout=600
 file.tmp.location=D://ncovData
 # 日志级别
 logging.level.root=INFO
-#logging.level.org.springframework.security=DEBUG
+logging.level.ddvudo.ORM.Mapper=DEBUG
